got a lot done but not appending. need to work on moment math.

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" type="text/css" media="screen" href="css/style.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://www.gstatic.com/firebasejs/5.5.2/firebase.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
 </head>
 
 <body>
@@ -57,22 +58,22 @@
                 <form>
                     <div class="form-group">
                         <label for="exampleInputEmail1">Add Train</label>
-                        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
+                        <input type="email" class="form-control" id="train-name" aria-describedby="emailHelp"
                             placeholder="">
                     </div>
                     <div class="form-group">
                         <label for="exampleInputEmail1">Destination</label>
-                        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
+                        <input type="email" class="form-control" id="destination" aria-describedby="emailHelp"
                             placeholder="">
                     </div>
                     <div class="form-group">
                         <label for="exampleInputEmail1">First Train Time (hh:mm - 24 hour time)</label>
-                        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
+                        <input type="email" class="form-control" id="first-train" aria-describedby="emailHelp"
                             placeholder="">
                     </div>
                     <div class="form-group">
                         <label for="exampleInputEmail1">Frequency</label>
-                        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
+                        <input type="email" class="form-control" id="frequency" aria-describedby="emailHelp"
                             placeholder="">
                     </div>
 
